# sdl-template

./: .clang-format  CMakeLists.txt
.zed/: tasks.json
src/: main.c
